[package]
name = "tide-tera"
version = "0.1.0"
authors = ["jmn <norlund@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid", "offline"] }
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }
async-std = { version = "1.7", features = [ "attributes", "tokio02" ] }
tide = "0.15.0"

serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tera = "1.6.1"
tide-tera = "0.2.3"

# AUTH CRATES
oauth2 = { version = "3.0.0", default-features = false, features = ["futures-03", "reqwest-010"] }
tide-secure-cookie-session = { git = "https://github.com/pepoviola/tide-secure-cookie-session.git", branch = "bump-tide-0.15" }
# surf = { version = "2.0.0-alpha.4", default-features = false, features = ["h1-client"] }
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
failure = "0.1.8"
http-types = "2.9.0"
