[package]
name = "tide-tera"
version = "0.1.0"
authors = ["jmn <norlund@gmail.com>"]
edition = "2018"

[profile.dev]
debug = true

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid", "offline"] }
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }
async-std = { version = "1.9", features = [ "attributes", "tokio02" ] }
tide = "0.15.0"

serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tera = "1.6.1"
tide-tera = "0.2.3"

# AUTH CRATES
oauth2 = { version = "4.1.0" }
tide-secure-cookie-session = { git = "https://github.com/pepoviola/tide-secure-cookie-session.git", branch = "bump-tide-0.15" }
surf = { version = "2.1.0" }
failure = "0.1.8"
http-types = "2.9.0"
oauth2-surf = "0.1.1"

# [patch.crates-io]
# oauth2 = { path = "../../git/oauth2-rs" }